Our finalized code... enjoy!

--- a/shrim/help.html
+++ b/shrim/help.html
@@ -12,7 +12,8 @@
 <link rel="stylesheet" type="text/css" href="help.css">
 
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="about.html" class = "about">About</a></li>
+  <li><a href="about.php" class = "about">About</a></li>
+   <li><a target = "_blank" href ="https://github.com/Shrim-V/InstaShrim" class = "about">Github</a></li>
   <li class="divider"></li>
 </ul>
 
@@ -22,7 +23,7 @@
     <ul class="right hide-on-med-and-down">
      <h2><b>Shrimstagram</b></h2>
       <a href = felp.php><img src = "french.png" class = "french"></a>
-    <a href = spegister.php><img src = "spanish.png" class = "spanish"></a>
+    <a href = spelp.php><img src = "spanish.png" class = "spanish"></a>
 
       <!-- Dropdown Trigger -->
       <li><a class="dropdown-button" data-activates="dropdown1">More<i class="material-icons right">arrow_drop_down</i></a></li>
@@ -49,6 +50,10 @@
     <li>
       <div class="collapsible-header"><i class="material-icons">contact_phone</i>How can I reach you guys?</div>
       <div class="collapsible-body"><span>If you want to contact one of us, just hit "more" on the navbar and select the about page. Here you will find all the info you need! </span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">access_time</i>How long did this website take to create?</div>
+      <div class="collapsible-body"><span>It took roughly three weeks to create!</span></div>
     </li>
     
   </ul>
